--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   		</ul>
   	</div>
   </div>
-  <div class=clear></div>
+  <div class="clear"></div>
   <div class="content">
 	<div class="word">
 		<h1>Donec felis augue, solicitudin
@@ -49,7 +49,7 @@
 	</div> 
 	<div class="photo">
 		<img src="img/demo.png">
-		<div class="text">ssorted Counches&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$209.00EACH
+		<div class="text">Assorted Counches&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$209.00EACH
 		</div>
 	</div>		
   	</div>
