--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <div class="wrap">
   <div class="header">
   	<div class="logo">
-  	<img src="img/logo.png">
+  	<a href="#">
+    <img src="img/logo.png">
+    </a>
   	</div>
   	
   	<div class=menu>
